<resources>
    <string name="title_activity_main">My App Portfolio</string>
    <string name="app_name">My App Portfolio</string>
    <string name="My_Apps">My Nanodegree Apps!</string>
    <string name="movies">POPULAR MOVIES</string>
    <string name="hawk">STOCK HAWK</string>
    <string name="bigger">BUILD IT BIGGER</string>
    <string name="material">MAKE YOUR APP MATERIAL</string>
    <string name="ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>
</resources>
